fix: items names

--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
         </code></pre>
 
         <div class="grid two-column">
-          <div>Grid item</div>
-          <div>Grid item</div>
-          <div>Grid item</div>
-          <div>Grid item</div>
-          <div>Grid item</div>
-          <div>Grid item</div>
+          <div>Item 1</div>
+          <div>Item 2</div>
+          <div>Item 3</div>
+          <div>Item 4</div>
+          <div>Item 5</div>
+          <div>Item 6</div>
         </div>
       </section>
 
@@ -47,11 +47,11 @@
         </code></pre>
 
         <div class="grid two-column-1-1fr">
-          <div>Grid item</div>
-          <div>Grid item</div>
-          <div>Grid item</div>
-          <div>Grid item</div>
-          <div>Grid item</div>
+          <div>Item 1</div>
+          <div>Item 2</div>
+          <div>Item 3</div>
+          <div>Item 4</div>
+          <div>Item 5</div>
         </div>
       </section>
 
@@ -63,11 +63,11 @@
         </code></pre>
 
         <div class="grid two-column-1-2fr">
-          <div>Grid item</div>
-          <div>Grid item</div>
-          <div>Grid item</div>
-          <div>Grid item</div>
-          <div>Grid item</div>
+          <div>Item 1</div>
+          <div>Item 2</div>
+          <div>Item 3</div>
+          <div>Item 4</div>
+          <div>Item 5</div>
         </div>
       </section>
 
@@ -80,9 +80,9 @@
         </code></pre>
 
         <div class="grid three-column-max">
-          <div>Grid item</div>
-          <div>50px - max-content</div>
-          <div>Grid item</div>
+          <div>Item 1</div>
+          <div>Item 2: 50px - max-content</div>
+          <div>Item 3</div>
         </div>
       </section>
 
@@ -95,9 +95,9 @@
         </code></pre>
 
         <div class="grid three-column-min">
-          <div>Grid item</div>
-          <div>50px - min-content</div>
-          <div>Grid item</div>
+          <div>Item 1</div>
+          <div>Item 2: 50px - min-content</div>
+          <div>Item 3</div>
         </div>
       </section>
 
@@ -110,15 +110,15 @@
         </code></pre>
 
         <div class="grid column-repeat">
-          <div class="yellow">One</div>
-          <div>Two</div>
-          <div class="yellow">Three</div>
-          <div>Four</div>
-          <div class="yellow">Five</div>
-          <div>Six</div>
-          <div class="yellow">Seven</div>
-          <div>Eight</div>
-          <div class="yellow">Nine</div>
+          <div class="yellow">Item 1</div>
+          <div>Item 2</div>
+          <div class="yellow">Item 3</div>
+          <div>Item 4</div>
+          <div class="yellow">Item 5</div>
+          <div>Item 6</div>
+          <div class="yellow">Item 7</div>
+          <div>Item 8</div>
+          <div class="yellow">Item 9</div>
         </div>
       </section>
 
@@ -131,18 +131,18 @@
         </code></pre>
 
         <div class="grid column-repeat-plus">
-          <div>One</div>
-          <div class="yellow">Two</div>
-          <div class="blue">Three</div>
-          <div class="yellow">Four</div>
-          <div class="blue">Five</div>
-          <div>Six</div>
-          <div>Seven</div>
-          <div class="yellow">Eight</div>
-          <div class="blue">Nine</div>
-          <div class="yellow">Ten</div>
-          <div class="blue">Eleven</div>
-          <div>Twelve</div>
+          <div>Item 1</div>
+          <div class="yellow">Item 2</div>
+          <div class="blue">Item 3</div>
+          <div class="yellow">Item 4</div>
+          <div class="blue">Item 5</div>
+          <div>Item 6</div>
+          <div>Item 7</div>
+          <div class="yellow">Item 8</div>
+          <div class="blue">Item 9</div>
+          <div class="yellow">Item 10</div>
+          <div class="blue">Item 11</div>
+          <div>Item 12</div>
         </div>
       </section>
 
@@ -156,18 +156,18 @@
         </code></pre>
 
         <div class="grid column-repeat-auto">
-          <div>One</div>
-          <div>Two</div>
-          <div>Three</div>
-          <div>Four</div>
-          <div>Five</div>
-          <div>Six</div>
-          <div>Seven</div>
-          <div>Eight</div>
-          <div>Nine</div>
-          <div>Ten</div>
-          <div>Eleven</div>
-          <div>Twelve</div>
+          <div>Item 1</div>
+          <div>Item 2</div>
+          <div>Item 3</div>
+          <div>Item 4</div>
+          <div>Item 5</div>
+          <div>Item 6</div>
+          <div>Item 7</div>
+          <div>Item 8</div>
+          <div>Item 9</div>
+          <div>Item 10</div>
+          <div>Item 11</div>
+          <div>Item 12</div>
         </div>
       </section>
 
@@ -181,15 +181,15 @@
         </code></pre>
 
         <div class="grid two-column auto-rows-50-75">
-          <div class="yellow">Grid item</div>
-          <div class="yellow">Grid item</div>
-          <div class="blue">Grid item</div>
-          <div class="blue">Grid item</div>
-          <div class="yellow">Grid item</div>
-          <div class="yellow">Grid item</div>
-          <div class="blue">Grid item</div>
-          <div class="blue">Grid item</div>
-          <div class="yellow">Grid item</div>
+          <div class="yellow">Item 1</div>
+          <div class="yellow">Item 2</div>
+          <div class="blue">Item 3</div>
+          <div class="blue">Item 4</div>
+          <div class="yellow">Item 5</div>
+          <div class="yellow">Item 6</div>
+          <div class="blue">Item 7</div>
+          <div class="blue">Item 8</div>
+          <div class="yellow">Item 9</div>
         </div>
       </section>
 
@@ -205,17 +205,17 @@
 
         <div class="grid"
           style="grid-template-columns: 140px 1fr; grid-template-rows: 70px 200px; grid-auto-rows: 50px 70px">
-          <div>Explicit item</div>
-          <div>Explicit item</div>
-          <div>Explicit item</div>
-          <div>Explicit item</div>
-          <div class="yellow">Implicit item</div>
-          <div class="blue">Implicit item</div>
-          <div class="yellow">Implicit item</div>
-          <div class="blue">Implicit item</div>
-          <div class="yellow">Implicit item</div>
-          <div class="blue">Implicit item</div>
-          <div class="yellow">Implicit item</div>
+          <div>Item 1: explicit</div>
+          <div>Item 2: explicit</div>
+          <div>Item 3: explicit</div>
+          <div>Item 4: explicit</div>
+          <div class="yellow">Item 5: emplicit</div>
+          <div class="blue">Item 6: emplicit</div>
+          <div class="yellow">Item 7: emplicit</div>
+          <div class="blue">Item 8: emplicit</div>
+          <div class="yellow">Item 9: emplicit</div>
+          <div class="blue">Item 10: emplicit</div>
+          <div class="yellow">Item 11: emplicit</div>
         </div>
       </section>
 
@@ -231,15 +231,17 @@
 
         <div class="grid"
           style="grid-template-columns: 140px 1fr; grid-template-rows: 50px 120px; grid-auto-rows: minmax(100px, max-content)">
-          <div>Explicit item</div>
-          <div>Explicit item</div>
-          <div>Explicit item</div>
-          <div>Explicit item</div>
-          <div class="yellow">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste, ipsam voluptatum in ab
+          <div>Item 1: explicit</div>
+          <div>Item 2: explicit</div>
+          <div>Item 3: explicit</div>
+          <div>Item 4: explicit</div>
+          <div class="yellow">Item 5: Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste, ipsam voluptatum
+            in ab
             nulla
             harum laborum quia rerum non commodi distinctio ut eos voluptate optio sequi mollitia. Distinctio, ad amet!
           </div>
-          <div class="blue">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet consequuntur totam quas
+          <div class="blue">Item 6: Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet consequuntur totam
+            quas
             maxime. Iure ullam nemo dolores, nulla ipsa alias est quas quo in earum vel, cum impedit amet voluptates?
           </div>
         </div>
@@ -256,17 +258,17 @@
         </code></pre>
 
         <div class="grid" style="grid-template-columns: 100px 1fr; grid-template-rows: 70px 100px; grid-auto-flow: row">
-          <div>Grid item</div>
-          <div>Grid item</div>
-          <div>Grid item</div>
-          <div>Grid item</div>
-          <div class="yellow">Auto item</div>
-          <div class="blue">Auto item</div>
-          <div class="yellow">Auto item</div>
-          <div class="blue">Auto item</div>
-          <div class="yellow">Auto item</div>
-          <div class="blue">Auto item</div>
-          <div class="yellow">Auto item</div>
+          <div>Item 1</div>
+          <div>Item 2</div>
+          <div>Item 3</div>
+          <div>Item 4</div>
+          <div class="yellow">Auto item 5</div>
+          <div class="blue">Auto item 6</div>
+          <div class="yellow">Auto item 7</div>
+          <div class="blue">Auto item 8</div>
+          <div class="yellow">Auto item 9</div>
+          <div class="blue">Auto item 10</div>
+          <div class="yellow">Auto item 11</div>
         </div>
       </section>
 
@@ -282,19 +284,19 @@
 
         <div class="grid"
           style="grid-template-columns: 50px 1fr; grid-template-rows: 70px 100px; grid-auto-flow: column">
-          <div>Grid item</div>
-          <div>Grid item</div>
-          <div>Grid item</div>
-          <div>Grid item</div>
-          <div class="yellow">Auto item</div>
-          <div class="blue">Auto item</div>
-          <div class="yellow">Auto item</div>
-          <div class="blue">Auto item</div>
-          <div class="yellow">Auto item</div>
-          <div class="blue">Auto item</div>
-          <div class="yellow">Auto item</div>
-          <div class="blue">Auto item</div>
-          <div class="yellow">Auto item</div>
+          <div>Item 1</div>
+          <div>Item 2</div>
+          <div>Item 3</div>
+          <div>Item 4</div>
+          <div class="yellow">Auto item 5</div>
+          <div class="blue">Auto item 6</div>
+          <div class="yellow">Auto item 7</div>
+          <div class="blue">Auto item 8</div>
+          <div class="yellow">Auto item 9</div>
+          <div class="blue">Auto item 10</div>
+          <div class="yellow">Auto item 11</div>
+          <div class="blue">Auto item 12</div>
+          <div class="yellow">Auto item 13</div>
         </div>
       </section>
 
@@ -307,15 +309,15 @@
         </code></pre>
 
         <div class="grid" style="grid-template-columns: 1fr 150px 1fr; grid-gap: 5px 30px">
-          <div>Grid item</div>
-          <div>Grid item</div>
-          <div>Grid item</div>
-          <div>Grid item</div>
-          <div>Grid item</div>
-          <div>Grid item</div>
-          <div>Grid item</div>
-          <div>Grid item</div>
-          <div>Grid item</div>
+          <div>Item 1</div>
+          <div>Item 2</div>
+          <div>Item 3</div>
+          <div>Item 4</div>
+          <div>Item 5</div>
+          <div>Item 6</div>
+          <div>Item 7</div>
+          <div>Item 8</div>
+          <div>Item 9</div>
         </div>
       </section>
 
@@ -331,15 +333,15 @@
 
         <div class="grid" style="grid-template-columns: 1fr 1fr 1fr;">
           <div class="blue" style="grid-column-start: 1; grid-column-end: 4;">
-            grid-column-start: 1
+            Item 1: grid-column-start: 1
             <br />
             grid-column-end: 4
           </div>
           <div class="yellow" style="grid-column: 1 / 4;;">
-            grid-column: 1 / 4
+            Item 2: grid-column: 1 / 4
           </div>
           <div style="grid-column: 1 / -1;;">
-            grid-column: 1 / -1
+            Item 3: grid-column: 1 / -1
           </div>
         </div>
       </section>
@@ -354,22 +356,22 @@
 
         <div class="grid" style="grid-template-columns: 1fr 1fr 1fr 1fr;">
           <div class="yellow" style="grid-column: 1 / span 4;">
-            1: grid-column: 1 / span 4
+            Item 1: grid-column: 1 / span 4
           </div>
           <div class="blue" style="grid-row: 2 / 5;">
-            2: grid-row: 2 / 5
+            Item 2: grid-row: 2 / 5
           </div>
           <div class="yellow" style="grid-column: 2 / 4;">
-            3: grid-column: 2 / 4
+            Item 3: grid-column: 2 / 4
           </div>
           <div class="blue" style="grid-row: 3 / 5;">
-            4: grid-row: 3 / 5
+            Item 4: grid-row: 3 / 5
           </div>
-          <div>5: Grid item</div>
-          <div>6: Grid item</div>
-          <div>7: Grid item</div>
+          <div>Item 5</div>
+          <div>Item 6</div>
+          <div>Item 7</div>
           <div class="yellow" style="grid-column: 3 / 5;">
-            8: grid-column: 3 / 5
+            Item 8: grid-column: 3 / 5
           </div>
         </div>
       </section>
